--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,8 +1,11 @@
-NAME = megaphone
+NAME = phonebook
 CXX = c++
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRCS = megaphone.cpp
+SRCS =	PhoneBook.cpp\
+		Contact.cpp\
+		main.cpp\
+	 
 OBJS = $(SRCS:%.cpp=%.o)
 
 all : $(NAME)
