--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -15,7 +15,7 @@ $(NAME) : $(OBJS)
 	$(CXX) -o $@ $^
 
 %.o : %.cpp
-	$(CXX) $(CXXFLAGS) -o $@ -c $^
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean : 
 	rm -rf $(OBJS)
